--- a/public/css/components/_videoplayer.scss
+++ b/public/css/components/_videoplayer.scss
@@ -1,6 +1,7 @@
 videoplayer {
 	padding: 20px 0;
 	overflow: hidden;
+	top: 70px;
 
 	> h2 {
 		@include header-text;
